overflow fix

--- a/designer-site/src/App.css
+++ b/designer-site/src/App.css
@@ -1,7 +1,7 @@
 
 .Loading{
   overflow-y: hidden;
-  height: 100vh;
+  height: 100vh!important;
 }
 .App-logo {
   height: 40vmin;
